added alt names to all images

--- a/index.html
+++ b/index.html
@@ -5,15 +5,12 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.4.0/jasmine.css" integrity="sha256-TTb3c5Z0pxgwRWHzGE700nLTMIOUNgkN2SGXqoflga0=" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="static/css/dc.min.css" type="text/css" />
     <link rel="stylesheet" href="static/css/style.css" type="text/css" />
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.4.0/jasmine.js" integrity="sha256-A1UHgrQzApWh893FP9przUyLCugwbvsLPAEUStp1MKA=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.4.0/jasmine-html.js" integrity="sha256-oxQQkzuwLW+9M6Ko6otgsJr9b5m0rR5V0pTBe/ITvNc=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.4.0/boot.js" integrity="sha256-HG8TKl0T65NyELmbUoo0H7/a1e++smYdXXtuuEsyKok=" crossorigin="anonymous"></script>
+
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="static/js/d3-scale-chromatic.v1.min.js"></script>
@@ -111,7 +108,7 @@
                     <div class="row">
                         <div class="col">
                             <div class="col">
-                                <img src="pics/talen_horton-tucker.png" class="player-pic"></img>
+                                <img src="pics/talen_horton-tucker.png" class="player-pic" alt="Talen Horton-Tucker"></img>
                             </div>
                             <div class="col">
                                 <p><strong>Youngest player:</strong> Talen Horton-Tucker</p>
@@ -122,7 +119,7 @@
                     <div class="row">
                         <div class="col">
                             <div class="col">
-                                <img src="pics/vince_carter.png" class="player-pic"></img>
+                                <img src="pics/vince_carter.png" class="player-pic" alt="Vince Carter"></img>
                             </div>
                             <div class="col">
                                 <p><strong>Oldest player:</strong> Vince Carter</p>
@@ -149,7 +146,7 @@
                     <div class="row">
                         <div class="col">
                             <div class="col">
-                                <img src="logos/la_lakers.png" class="chart-team-logo"></img>
+                                <img src="logos/la_lakers.png" class="chart-team-logo" alt="Los Angeles Lakers"></img>
                             </div>
                             <div class="col">
                                 <p><strong>Most experienced team:</strong> Los Angeles Lakers</p>
@@ -160,7 +157,7 @@
                     <div class="row">
                         <div class="col">
                             <div class="col">
-                                <img src="logos/chicago_bulls.png" class="chart-team-logo"></img>
+                                <img src="logos/chicago_bulls.png" class="chart-team-logo" alt="Chicago Bulls"></img>
                             </div>
                             <div class="col">
                                 <p><strong>Least experienced team:</strong> Chicago Bulls</p>
